# tetris-rs

./: Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
src/: collision.rs  components.rs  draw.rs  gravity.rs  gravity_system.rs  input.rs  main.rs  spawner.rs  srs.rs
